# Spotify-auditor-11111

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  CLAUDE_MD_ADDITIONS.md  PFC artists.txt  Procfile  api_field_research.md  bad_actor_database.md  code-quality-fix-plan.md  demo-audit-claude-code.md  fix-retry-scan-and-summary-metrics.md  fixes-alignment-enhancements (1).md  new_evidence_sources_instructions.md  pfc_playlist_registry.md  pyproject.toml  render.yaml  requirements.txt  scan_data_persistence.md  spotify-audit-output.jsx  spotify-audit-spec.md  test-mode-instructions.md  ui-spec-round2.md
data/demo/: cached_report.html  cached_report.json
docs/: scoring_logic_review.md  simplified_scoring_architecture.md
scripts/: 01_enrich.py  02_expand.py  03_mine.py  04_validate.py  05_train.py  generate_demo_cache.py
spotify_audit/: __init__.py  analyze_pfc_data.py  audit_runner.py  bandsintown_client.py  blocklist_builder.py  cache.py  cli.py  config.py  deep_analysis.py  deezer_ai.py  deezer_client.py  discogs_client.py  entity_cli.py  entity_db.py  evidence.py  fetch_pfc_tracks.py  genius_client.py  known_entities.py  lastfm_client.py  musicbrainz_client.py  name_matching.py  press_coverage.py  pro_registry.py  scan_db.py  scoring.py  setlistfm_client.py  songkick_client.py  spotify_client.py  wikipedia_client.py  youtube_client.py
tests/: conftest.py  test_clients.py  test_cms_api.py  test_config.py  test_entity_db_cms.py  test_evidence.py  test_integration.py  test_scoring.py
web/: api.py  app.py  scan_store.py  serve_public.py
(+2876 files in other folders)
