[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-audit"
version = "0.1.0"
description = "Analyze Spotify playlists for AI-generated, ghost, and fake artists"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "spotifyscraper>=2.1",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
web = ["flask>=3.0", "pyngrok>=7.0"]
standard = ["Wikipedia-API>=0.6", "anthropic>=0.39"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
spotify-audit = "spotify_audit.cli:main"
spotify-audit-db = "spotify_audit.entity_cli:cli"

[tool.setuptools.packages.find]
include = ["spotify_audit*"]

[tool.ruff]
line-length = 100
target-version = "py310"
